--- a/100workschallenge/index.html
+++ b/100workschallenge/index.html
@@ -46,11 +46,11 @@
       <main>
         <!-- Message -->
         <section id="message">
-          <p>Not updated. This my challenge was the end at July 13, 2020.<br>Check out on <a href="https://codepen.io/toshiya-marukubo">CodePen</a> from now on.</p>
+          <p>Not updated. This challenge has already been completed at July 13, 2020.<br>Check out on <a href="https://codepen.io/toshiya-marukubo">CodePen</a> from now on.</p>
           <h2>I'm doing what I can do on the code.</h2>
           <p>
-            The published works has been created using canvas 2D on pure JavaScript.<br>
-            I'm not a web dev nor designer, so I don't know the detail... <a href="#about">more</a>
+            All the published works are created with JavaScript.<br>
+            I'm not a web dev, so I don't know the detail... <a href="#about">more</a>
           </p>
           <nav>
             <ul>
@@ -183,8 +183,8 @@
             <h3>Me</h3>
             <p>
               Hi, I'm Toshiya Marukubo.<br>
-              I'm not a web dev nor designer.<br>
-              it is my hobby to write JavaScript and Node.js now.<br>
+              I'm not a web dev.<br>
+              It is my hobby to write JavaScript and Node.js now.<br>
               I'm not good at english, so please forgive my mistakes of sentence.
             </p>
             <h3>This Site</h3>
