--- a/works.html
+++ b/works.html
@@ -197,9 +197,9 @@
         opacity: 0;
         -webkit-box-shadow: 0.8rem 0.8rem 0.8rem #DDD;
                 box-shadow: 0.8rem 0.8rem 0.8rem #DDD;
-        -webkit-transform: translateX(50px);
-            -ms-transform: translateX(50px);
-                transform: translateX(50px);
+        -webkit-transform: translateY(50px);
+            -ms-transform: translateY(50px);
+                transform: translateY(50px);
         -webkit-transition: opacity 0.8s 0.4s, -webkit-transform 0.8s 0.4s;
         transition: opacity 0.8s 0.4s, -webkit-transform 0.8s 0.4s;
         -o-transition: opacity 0.8s 0.4s, transform 0.8s 0.4s;
@@ -351,7 +351,6 @@
   </head>
   <body>
     <div id="container">
-      <h1>WORKS & LEARNING</h1>
       <div id="loading"></div>
       <div class="backBtn">
         <a href="https://toshiya-marukubo.github.io/">
