--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
       <header>
         <div id="hamburger">
-          <a href="#" role="button">
+          <a href="#" role="button" aria-label="macdonald">
             <div class="hamburger-container">
             </div>
           </a>
