--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
         <small>&copy Toshiya Marukubo</small>
       </footer>
     </div>
-    <script src="./scripts/happyMeal.js"></script>
-    <script src="./scripts/shuffleText.js"></script>
-    <script src="./scripts/arm.js"></script>
-    <script src="./scripts/FKSystem.js"></script>
-    <script src="./scripts/main.js"></script>
+    <script defer src="./scripts/happyMeal.js"></script>
+    <script defer src="./scripts/shuffleText.js"></script>
+    <script defer src="./scripts/arm.js"></script>
+    <script defer src="./scripts/FKSystem.js"></script>
+    <script defer src="./scripts/main.js"></script>
     <!--
       I referenced kinematics on 'Coding Math YouTube Channel'.
       Link : https://www.youtube.com/channel/UCF6F8LdCSWlRwQm_hfA2bcQ
