--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
     <title>Toshiya Marukubo | Is this my site?</title>
   </head>
   <body>
-    <!--
     <div class="loading">
-      <div class="circle scale"></div>
+      <div class="circle"></div>
     </div>
-    -->
     <div class="container">
       <header>
         <div id="hamburger">
