--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <h1 class="shuffleText" aria-live="assertive" aria-atomic="true">iHateCoding();</h1>
       </header>
-      <main>
+      <div class="main">
         <nav>
           <h2>Hi there. I'm Toshiya Marukubo.</h2>
           <h3>I make trash with trash code for people.</h3>
@@ -89,7 +89,7 @@
           </ul>
           <p>My Skill : Google</p>
         </nav>
-      </main>
+      </div>
       <footer>
         <small>&copy Toshiya Marukubo</small>
       </footer>
