--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/100workschallenge/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- style -->
-    <link href="./styles/style.css" rel="stylesheet">
+    <link href="./styles/common.css" rel="stylesheet">
+    <link href="./styles/index.css" rel="stylesheet">
     <title>Toshiya Marukubo | Is this my site?</title>
   </head>
   <body>
@@ -41,8 +42,8 @@
             <div class="hamburger-container">
             </div>
           </a>
-        </div>
-        <h1 class="shuffleText" aria-live="assertive" aria-atomic="true">iHateCoding();</h1>
+        </div><!-- hamburger -->
+        <h1 class="shuffleText">iHateCoding();</h1>
       </header>
       <div class="main">
         <nav>
@@ -84,14 +85,25 @@
                 </svg>
               </a>
             </li>
+            <li>
+              <a href="./trashes.html">
+                <svg role="img" aria-label="trash box image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2">
+                  <polyline points="3 6 5 6 21 6"></polyline>
+                  <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                  <line x1="10" y1="11" x2="10" y2="17"></line>
+                  <line x1="14" y1="11" x2="14" y2="17"></line>
+                </svg>
+              </a>
+            </li>
           </ul>
-          <p>My Skill : Google</p>
+          <p>My Skill : Google, Copy and Paste</p>
         </nav>
-      </div>
+      </div><!-- main -->
       <footer>
         <small>&copy Toshiya Marukubo</small>
       </footer>
     </div>
+    <script defer src="https://www.promisejs.org/polyfills/promise-done-7.0.4.min.js"></script>
     <script defer src="./scripts/happyMeal.js"></script>
     <script defer src="./scripts/shuffleText.js"></script>
     <script defer src="./scripts/arm.js"></script>
