--- a/trashes.html
+++ b/trashes.html
@@ -72,6 +72,7 @@
               </svg>
             </a>
           </li>
+          <li id="counter">0%</li>
         </ol>
       </nav>
       <div class="return">
