--- a/trashes.html
+++ b/trashes.html
@@ -48,8 +48,8 @@
       </footer>
       <nav>
         <ol>
-          <li id="reset">
-            <a href="#" role="button" aria-label="reset items" tabindex="1">
+          <li>
+            <a href="#" id="reset" class="sortButton" role="button" aria-label="reset items" tabindex="1">
               <svg role="img" aria-label="reset button image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-cw">
                 <polyline points="23 4 23 10 17 10"></polyline>
                 <polyline points="1 20 1 14 7 14"></polyline>
@@ -57,15 +57,15 @@
               </svg>
             </a>
           </li>
-          <li id="sortLovesToSmallBtn">
-            <a href="#" role="button" aria-label="sort loves to small" tabindex="2">
+          <li>
+            <a href="#" id="sortLovesToSmallBtn" class="sortButton" role="button" aria-label="sort loves to small" tabindex="2">
               <svg role="img" aria-label="heart button image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
                 <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
               </svg>
             </a>
           </li>
-          <li id="sortViewsToSmallBtn">
-            <a href="#" role="button" aria-label="sort views to small" tabindex="3">
+          <li>
+            <a href="#" id="sortViewsToSmallBtn" class="sortButton" role="button" aria-label="sort views to small" tabindex="3">
               <svg role="img" aria-label="view button image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-eye">
                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                 <circle cx="12" cy="12" r="3"></circle>
