--- a/trashes.html
+++ b/trashes.html
@@ -75,8 +75,8 @@
           <li id="counter">0%</li>
         </ol>
       </nav>
-      <div class="return">
-        <a href="./index.html" role="button" aria-label="return home" tabindex="4">
+      <div>
+        <a href="./index.html" class="return" role="button" aria-label="return home" tabindex="4">
           <svg role="img" aria-label="return button image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-corner-up-left">
             <polyline points="9 14 4 9 9 4"></polyline>
             <path d="M20 20v-7a4 4 0 0 0-4-4H4"></path>
