--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       </footer>
     </div>
     <script defer src="https://www.promisejs.org/polyfills/promise-done-7.0.4.min.js"></script>
+    <script defer src="./scripts/preloadImages.js"></script>
     <script defer src="./scripts/happyMeal.js"></script>
     <script defer src="./scripts/shuffleText.js"></script>
     <script defer src="./scripts/arm.js"></script>
