--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <script defer src="./scripts/shuffleText.js"></script>
     <script defer src="./scripts/arm.js"></script>
     <script defer src="./scripts/FKSystem.js"></script>
-    <script defer src="./scripts/main.js"></script>
+    <script defer src="./scripts/index.js"></script>
     <!--
       I referenced kinematics on 'Coding Math YouTube Channel'.
       Link : https://www.youtube.com/channel/UCF6F8LdCSWlRwQm_hfA2bcQ
