--- a/trashes.html
+++ b/trashes.html
@@ -85,6 +85,6 @@
       </div>
     </div>
     <script defer src="./scripts/shuffleText.js"></script>
-    <script defer src="./scripts/getJson.js"></script>
+    <script defer src="./scripts/trashes.js"></script>
   </body>
 </html>
