--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </nav>
       </div><!-- main -->
       <footer>
-        <small>&copy Toshiya Marukubo</small>
+        <small>&copy; Toshiya Marukubo</small>
       </footer>
     </div>
     <script defer src="https://www.promisejs.org/polyfills/promise-done-7.0.4.min.js"></script>
