--- a/trashes.html
+++ b/trashes.html
@@ -44,7 +44,7 @@
         </div>
       </div><!-- main -->
       <footer>
-        <small>&copy Toshiya Marukubo</small>
+        <small>&copy; Toshiya Marukubo</small>
       </footer>
       <nav>
         <ol>
