--- a/trashes.html
+++ b/trashes.html
@@ -84,6 +84,7 @@
         </a>
       </div>
     </div>
+    <script defer src="https://www.promisejs.org/polyfills/promise-done-7.0.4.min.js"></script>
     <script defer src="./scripts/shuffleText.js"></script>
     <script defer src="./scripts/trashes.js"></script>
   </body>
