--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <small>&copy; Toshiya Marukubo</small>
       </footer>
     </div>
-    <script defer src="https://www.promisejs.org/polyfills/promise-done-7.0.4.min.js"></script>
+    <script defer src="https://polyfill.io/v3/polyfill.min.js?features=Promise"></script>
     <script defer src="./scripts/preloadImages.js"></script>
     <script defer src="./scripts/happyMeal.js"></script>
     <script defer src="./scripts/shuffleText.js"></script>
