--- a/trashes.html
+++ b/trashes.html
@@ -27,6 +27,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/100workschallenge/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- style -->
+    <script src="./scripts/getImagesFromJSON.js"></script>
     <link href="./styles/common.css" rel="stylesheet">
     <link href="./styles/trashes.css" rel="stylesheet">
     <title>Toshiya Marukubo | Is this my site?</title>
@@ -86,6 +87,7 @@
     </div>
     <script defer src="https://polyfill.io/v3/polyfill.min.js?features=Promise"></script>
     <script defer src="./scripts/shuffleText.js"></script>
+    <script defer src="./scripts/getItemsDataFromJSON.js"></script>
     <script defer src="./scripts/trashes.js"></script>
   </body>
 </html>
