--- a/study-of-webgl/works/water-breathing.html
+++ b/study-of-webgl/works/water-breathing.html
@@ -102,8 +102,9 @@
         </div><!-- end header-container -->
       </div><!-- end header -->
     </div><!-- end body-container -->
-    <script src="../scripts/three.min.js"></script>
-    <script src="../scripts/popup.js"></script>
-    <script src="../scripts/waterbreathing.js"></script>
+    <script defer src="../scripts/three.min.js"></script>
+    <script defer src="../scripts/fullScreen.js"></script>
+    <script defer src="../scripts/popup.js"></script>
+    <script defer src="../scripts/waterbreathing.js"></script>
   </body>
 </html>
