--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -18,13 +18,15 @@
     <meta property="og:site_name" content="Toshiya Marukubo | Study of WebGL">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/">
     <meta property="og:title" content="Toshiya Marukubo | Study of WebGL">
-    <meta property="og:image" content="./og-home.png">
+    <meta property="og:image" content="./images/og-home.png">
     <meta property="og:description" content="Study of WebGL">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
     <!-- Icon -->
+    <link rel="apple-touch-icon" type="image/png" href="./images/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="./images/icon-192x192.png">
     <!-- style -->
     <link href="./styles/reset.min.css" rel="stylesheet">
     <link href="./styles/index.css" rel="stylesheet">
@@ -40,10 +42,7 @@
           <h1><a href="./index.html">TM</a></h1>
           <div class="description">
             <h2>Study of WebGL</h2>
-            <p>
-              This place is to learn WebGL.<br>
-              Created by Toshiya Marukubo.
-            </p>
+            <p>Created by Toshiya Marukubo.</p>
             <ul>
               <li>
                 <a href="https://toshiya-marukubo.github.io/">
@@ -98,18 +97,130 @@
         <div class="main-container">
           <div class="works">
             <div class="image">
-              <a href="./works/water-breathing.html">
-                <img src="./images/water-breathing.png" loading="lazy" alt="water breathing image" width="848" height="600">
-                <div class="slide">
+              <a href="./works/cube.html">
+                <img src="./images/cube.png" loading="lazy" alt="cube image" width="848" height="600">
+                <div class="overlay">
                   <span class="view">View</span>
                 </div>
               </a>
             </div><!-- end image -->
             <ol>
               <li class="title">
-                <a href="./works/water-breathing.html">Water Breathing</a>
+                <a href="./works/cube.html">Cube</a>
+              </li>
+              <li class="date">Created Sep 26, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/liquid.html">
+                <img src="./images/liquid.png" loading="lazy" alt="liquid image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/liquid.html">Cube</a>
+              </li>
+              <li class="date">Created Sep 17, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/monument.html">
+                <img src="./images/monument.png" loading="lazy" alt="cube image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/monument.html">Monument</a>
+              </li>
+              <li class="date">Created Sep 17, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/breathing.html">
+                <img src="./images/breathing.png" loading="lazy" alt="breathing image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/breathing.html">Breathing</a>
               </li>
               <li class="date">Created Aug 27, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/blooming.html">
+                <img src="./images/blooming.png" loading="lazy" alt="blooming image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/blooming.html">Blooming</a>
+              </li>
+              <li class="date">Created Aug 24, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/rotation.html">
+                <img src="./images/rotation.png" loading="lazy" alt="rotation image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/rotation.html">Rotation</a>
+              </li>
+              <li class="date">Created Aug 18, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/castle.html">
+                <img src="./images/castle.png" loading="lazy" alt="castle image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/castle.html">Castle</a>
+              </li>
+              <li class="date">Created Aug 13, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/137-5.html">
+                <img src="./images/137-5.png" loading="lazy" alt="137.5 image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/137-5.html">137.5</a>
+              </li>
+              <li class="date">Created Aug 12, 2021</li>
             </ol>
           </div><!-- end works -->
         </div><!-- end main-container -->
@@ -121,8 +232,9 @@
       </div><!-- end footer -->
     </div><!-- end body-container -->
     <script defer src="./scripts/three.min.js"></script>
-    <script defer src="./scripts/fullScreen.js"></script>
+    <script defer src="./scripts/fullscreen.js"></script>
     <script defer src="./scripts/cellautomaton.js"></script>
+    <script defer src="./scripts/scroll.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
