--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -122,7 +122,7 @@
             </div><!-- end image -->
             <ol>
               <li class="title">
-                <a href="./works/liquid.html">Cube</a>
+                <a href="./works/liquid.html">Liquid</a>
               </li>
               <li class="date">Created Sep 17, 2021</li>
             </ol>
