--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -232,6 +232,7 @@
       </div><!-- end footer -->
     </div><!-- end body-container -->
     <script defer src="./scripts/three.min.js"></script>
+    <script defer src="./scripts/fullscreen.js"></script>
     <script defer src="./scripts/cellautomaton.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
