--- a/study-of-webgl/works/137-5.html
+++ b/study-of-webgl/works/137-5.html
@@ -105,6 +105,6 @@
     <!--
     <script defer src="../scripts/popup.js"></script>
     -->
-    <script defer src="../scripts/1375.js"></script>
+    <script defer src="../scripts/137-5.js"></script>
   </body>
 </html>
