--- a/study-of-webgl/works/137-5.html
+++ b/study-of-webgl/works/137-5.html
@@ -100,9 +100,9 @@
         </div><!-- end header-container -->
       </div><!-- end header -->
     </div><!-- end body-container -->
-    <script defer src="../scripts/three.min.js"></script>
-    <script defer src="../scripts/fullScreen.js"></script>
-    <script defer src="../scripts/popup.js"></script>
-    <script defer src="../scripts/137-5.js"></script>
+    <script src="../scripts/three.min.js"></script>
+    <script src="../scripts/fullScreen.js"></script>
+    <script src="../scripts/popup.js"></script>
+    <script src="../scripts/137-5.js"></script>
   </body>
 </html>
