--- a/study-of-webgl/works/breathing.html
+++ b/study-of-webgl/works/breathing.html
@@ -108,7 +108,7 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
-    <script defer src="../scripts/fullScreen.js"></script>
+    <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
     <script defer src="../scripts/breathing.js"></script>
   </body>
