--- a/study-of-webgl/works/rotation.html
+++ b/study-of-webgl/works/rotation.html
@@ -105,7 +105,7 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
-    <script defer src="../scripts/fullScreen.js"></script>
+    <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
     <script defer src="../scripts/rotation.js"></script>
   </body>
